# ComputerGraphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  easy_image.cc  engine.cc  filelist  l_parser.h
2DLsystems/: filelist
3DLine/: filelist
EngineModules/: AbstractModule.h  Face.cpp  Face.h  Figure.cpp  Figure.h  Figures3D.cpp  Figures3D.h  Line2D.cpp  Line2D.h  Lines2D.cpp  Lines2D.h  MatrixMath.cpp  MatrixMath.h  Point2D.cpp  Point2D.h  ZBuffer.cpp  ZBuffer.h  _2DLSystemModule.cpp  _2DLSystemModule.h  _3DLineModule.cpp  _3DLineModule.h  _3DLsystem.cpp  _3DLsystem.h
